# proof-arena

./: .env  .env.dev  .env.production  .env.testing  .eslintrc.cjs  .gitignore  .gitleaks.toml  .gitmodules  .lintstagedrc  .prettierrc  Cargo.toml  README.md  build.sh  cargo.toml  index.html  package.json  package.json.orig  pnpm-lock.yaml  rust-toolchain  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts  vite.config.ts.orig
.github/workflows/: auto_benchmark.yml
.husky/: pre-commit
SPJ/: cgroup_manager.go  doc.md  go.mod  logger.go  pipe_manager.go  resource_monitor.go  result_collector.go  spj_template.go  timer.go  types.go
SPJ/IPCUtils/: go.mod  ipc.go
apps/web/: .lintstagedrc  package.json  tsconfig.json  vite.config.ts
apps/web/public/: supportedProvers.json
apps/web/scripts/: syncProvers.js
apps/web/src/: App.tsx  global.css  main.tsx  svgr.d.ts  theme.ts
apps/web/src/components/: ChatInterface.tsx
apps/web/src/config/: giscus.ts
apps/web/src/layout/: Header.tsx  NavBar.tsx  header.style.ts  index.tsx  layout.style.ts
apps/web/src/services/: Request.ts
apps/web/src/utils/: checkImg.ts  delay.ts  formatNumber.ts  superScript.ts  transferToNumber.ts
benchmark/: sha256_data.md
docs/: how_to_contribute.md  how_to_interact_with_SPJ.md  how_to_interact_with_SPJ_Rust.md  how_to_submit_new_problem.md  how_to_submit_new_prover.md  judger_spec.md  machine_specification.md  scj_output_raw_data_format.md  sha256_hash_details.md  spj_output_raw_data_format.md
docs/ecdsa_signature/: problem.md  submissions.json
docs/keccak256_hash/: problem.md
docs/poseidon2_hash_bn254/: problem.md  submissions.json
docs/poseidon2_hash_m31/: problem.md
docs/sha246_hash/: problem.md  submissions.json
docs/sha256_hash/: problem.md
mock/: proverDetail.mock.ts  proverList.mock.ts
plugin/: core.ts  myMdPlugin.ts  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json  util.ts
plugin/src/: gfmFrontMatterParser.ts  gfmTableParser.ts  myMdPlugin.ts  problemParser.ts  util.ts
problems/AXorB/: problem.md
problems/AXorB/SPJ/: SPJ  go.mod  main.go
problems/AXorB/expectedProver/: go.mod  prover.go
problems/AXorB/halo2/: Cargo.toml  run-halo2-xor-circuit.sh
problems/AXorB/halo2/src/: circuit.rs  config.rs  lib.rs  prover.rs  test.rs  verifier.rs
problems/AXorB/stwo/: Cargo.toml  run.sh
problems/AXorB/stwo/src/: constraints.rs  gen.rs  lib.rs  main.rs
problems/HowToContribute/: problem.md
problems/IPCUtils/: go.mod  ipc.go
problems/JudgerSpec/: problem.md
problems/ecdsa_signature/: problem.md
problems/keccak/expectedProver/: go.mod  prover.go  prover_test.go
problems/keccak/spj/: 1-GNARK KECCAK-256.json  benchmark.go  go.mod  main.go  monitor.go  prover.go  types.go  utils.go
problems/keccak256_hash/: problem.md  result.json
problems/keccak256_hash/SPJ/: SPJ  a.json  go.mod  main.go
problems/keccak256_hash/expander-keccak/: Cargo.toml  run.sh
problems/keccak256_hash/expander-keccak/src/: lib.rs  main.rs
problems/keccak256_hash/expectedProver/: go.mod  prover.go  run.sh
problems/keccak256_hash/halo2/: Cargo.toml  README.md  run-halo2-keccak-circuit.sh
problems/keccak256_hash/halo2/src/: config.rs  lib.rs  prover.rs  verifier.rs
problems/keccak256_hash/maliciousProver/: go.mod  prover.go
problems/keccak256_hash/plonky3-pcbin/: proof-arena-integration  readme.md  run.sh
problems/keccak256_hash/plonky3-pcbin-bs8test/: proof-arena-integration  run.sh
problems/keccak256_hash/spj/: benchmark.go  go.mod  main.go  monitor.go  types.go
problems/poseidon2_hash_bn254/: submissions.json
problems/poseidon2_hash_m31/: problem.md
problems/poseidon2_hash_m31/SPJ/: go.mod  main.go
problems/poseidon2_hash_m31/plonky3/: Cargo.toml  run-plonky3-poseidon-circuit.sh
problems/poseidon2_hash_m31/plonky3/src/: lib.rs  prover.rs  verifier.rs
problems/poseidon2_hash_m31/stwo/: Cargo.toml  run-stwo-poseidon-circuit.sh  rust-toolchain
problems/poseidon2_hash_m31/stwo/src/: lib.rs  poseidon.rs  prover.rs  test.rs  verifier.rs
problems/sha256_hash/: problem.md
problems/sha256_hash/SPJ/: expander-sha256.json  go.mod  main.go
problems/sha256_hash/ecc/: main.go
problems/sha256_hash/ecc-rust/: Cargo.toml  run.sh
problems/sha256_hash/ecc-rust/src/: lib.rs  main.rs
problems/sha256_hash/expander-sha256/: compile.sh  run.sh
problems/sha256_hash/expander-sha256/src/: lib.rs  main.rs  spj.rs
problems/zkvm_fibonacci/: problem.md
rust/keccak/halo2/: README.md
rust/keccak/halo2/src/: circuit.rs  config.rs  lib.rs  prover.rs  setup.rs  tests.rs  (+1 more)
rust/scripts/: run-halo2-keccak-circuit.sh
spj_output/AXorB/: 1-GNARK_A_Xor_B.json  GNARK_A_Xor_B.json  Halo2-Xor-256.json  stwo.json
spj_output/keccak/spj/: 1-GNARK KECCAK-256-2.json  1-GNARK KECCAK-256.json
spj_output/keccak256_hash/: 1-GNARK KECCAK-256.json  2-Halo2-Keccak-256.json  3-GNARK_KECCAK-256.json  GNARK KECCAK-256.json  GNARK_KECCAK-256.json  Halo2-Keccak-256.json  expander-keccak.json  plonky3-pcbin.json
spj_output/poseidon2_hash_m31/: Plonky3-poseidon-m31.json  Stwo-poseidon-m31.json
spj_output/sha256_hash/: expander-sha256.json
src/: App.tsx  global.css  main.tsx  svgr.d.ts
src/components/: modal.ts
src/components/base/: BaseButton.tsx  CustomTitle.tsx  LoadingModal.tsx  PrimaryButton.tsx  ProofModal.tsx  ProofSpin.tsx
src/components/biz/: UserAccount.tsx
src/consts/: ProblemsData.ts
src/hooks/: useLogout.ts
src/layout/: Header.tsx  MobileNavBar.tsx  PcNavBar.tsx  header.style.ts  index.tsx  layout.style.ts
src/pages/Login/: index-bak.tsx  index.tsx  login.style.ts
src/pages/Problems/: index.style.ts  index.tsx
src/pages/ProblemsDescription/: index.style.ts  index.tsx
src/pages/ProblemsDetail/: index.style.ts  index.tsx
src/services/: user.ts
src/services/problems/: index.ts  types.ts
src/services/prover/: index.ts  types.ts
src/store/: global.ts  proverDetail.ts
src/utils/: color.ts  index.ts  time.ts
system_benchmarks/: go.mod  io_benchmark.go  named_pipe_benchmark.cpp.txt  stdin_benchmark.go  stdio_benchmark.cpp.txt
(+60 files in other folders)
