[package]
name = "stwo-xor-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
itertools = "0.13.0"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git", features = ["rayon"] }
tracing = "0.1.40"
