[package]
name = "expander-keccak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }
expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection.git", branch = "rust_rewrite" }
expander-rs = { git = "https://github.com/PolyhedraZK/Expander" }
arith = { git = "https://github.com/PolyhedraZK/Expander" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
rayon = "1.9"