[package]
name = "plonky3-hash-m31"
version = "0.1.0"
edition = "2021"

[dependencies]

ark-std = "0.4.0"
bincode = "1.3.3"
itertools = "0.13.0"
rand = "0.8.5"
rayon = "1.5.1"
serde = { version = "1.0", default-features = false }

p3-challenger = { git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3" }

[[bin]]
name = "prover"
path = "src/prover.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"