[package]
name = "expander-sha256"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
expander_compiler = { git = "https://github.com/PolyhedraZK/ExpanderCompilerCollection.git"}
expander-rs = { git = "https://github.com/PolyhedraZK/Expander" }
arith = { git = "https://github.com/PolyhedraZK/Expander" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
rayon = "1.9"
sha2 = "0.10.8"